<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greet_User"
        android:layout_weight="2"
        style="@style/FirstTitle"
        android:padding="20dp" />

    <EditText
        android:id="@+id/activity_main_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_name"
        android:textAlignment="center" />

    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:layout_weight="1"
        android:text="@string/play_btn"/>

    <Button
        android:id="@+id/activity_main_score_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:layout_weight="1"
        android:text="@string/score_btn"/>

</LinearLayout>