<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.topquiz.controller.ScoreActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/activity_score_titre_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/titre"
        android:text="@string/classement_title"
        android:layout_weight="2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_score_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/activity_score_high_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/high_score"/>

        <Button
            android:id="@+id/activity_score_alphabetic_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/activity_score_high_btn"
            style="@style/button"
            android:text="@string/alphabetic_score"/>

    </RelativeLayout>

    </LinearLayout>